Fix Exchange header image shrinking too much at small screen size

--- a/styles/exchange.less
+++ b/styles/exchange.less
@@ -7,6 +7,10 @@
   img.prx-splash {
     position: absolute;
     width: 100vw;
+    @media (max-width: @smallScreenWidth) {
+      height: 100%;
+      width: auto;
+    }
   }
 
   section {
